# adaptivesswt

./: .bumpversion.cfg  .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  adaptivesswt.py  configuration.py  freq_utils.py  plot_utils.py  pyproject.toml  pytest.ini  scent.py  setup.py  signal_utils.py  sswt.py  waveletExample.py
adaptivesswt/: __init__.py  adaptivesswt.py  configuration.py  freq_utils.py  plot_utils.py  sswt.py
adaptivesswt/utils/: calculate_freq_grid.py  freq_utils.py  import_utils.py  measures_utils.py  plot_utils.py  process_data.py  signal_utils.py  waveletExample.py
docs/: Makefile  Performance tests.md  conf.py  index.rst
docs/api/: api.rst
docs/latex/: entropies_table.tex  mse_table_dual_qchirp.tex  mse_table_signal.tex
makeutils/: debug.mk  functions.mk
scripts/: SCRIPTS.md  check_sswt_performance.py  mse_for_synthetic_signals.py  process_data_example.py  process_wav_example.py
tests/: test_sswt_performance.py
